# Bottles-Deflatpak

./: README.md  SECURITY.md  build-packages.sh  meson.build  pyrightconfig.json  test_path_normalization.py
.github/ISSUE_TEMPLATE/: bug.yml  mirror.yml
.github/workflows/: package.yml
bottles/: meson.build
bottles/backend/: globals.py  health.py  meson.build  params.py  runner.py
bottles/backend/dlls/: dll.py  dxvk.py  latencyflex.py  meson.build  nvapi.py  vkd3d.py
bottles/backend/managers/: backup.py  bottle_manager.py  component.py  dependency.py  discovery.py  epicgamesstore.py  installer.py  manager.py  meson.build  origin.py  playtime.py  registry_rule.py  repository.py  runtime.py  sandbox.py  steam.py  steamgriddb.py  system.py  template.py  thumbnail.py  ubisoftconnect.py  versioning.py
bottles/backend/models/: config.py  meson.build  process.py
bottles/backend/repos/: meson.build  repo.py
bottles/backend/utils/: connection.py  generic.py  json.py  manager.py  meson.build  path.py  portal.py  proc.py  steam.py  terminal.py  umu.py  vulkan.py  wine.py
bottles/backend/wine/: drives.py  executor.py  meson.build  reg.py  wineboot.py  winecommand.py  winepath.py  wineserver.py
bottles/backend/wine/strategies/: base_strategies.py  engine_strategies.py  graphics_strategies.py  meson.build  pipeline.py  strategist.py  wrapper_strategies.py
bottles/frontend/: main.py  meson.build  params.py
bottles/frontend/cli/: cli.py  meson.build
bottles/frontend/ui/: bottle-row.blp  bottles.gresource.xml  details-bottle.blp  details-preferences.blp  details-taskmanager.blp  details.blp  dialog-dll-overrides.blp  dialog-journal.blp  help-overlay.blp  meson.build  preferences-components.blp  preferences-graphics.blp  preferences-performance.blp  preferences-system.blp  preferences.blp  program-entry.blp  window.blp
bottles/frontend/utils/: common.py  filters.py  gtk.py  meson.build  playtime.py  program_controller.py  sh.py
bottles/frontend/views/: bottle_dependencies.py  bottle_details.py  bottle_installers.py  bottle_preferences.py  bottle_registry_rules.py  bottle_taskmanager.py  bottle_versioning.py  details.py  importer.py  library.py  list.py  loading.py  meson.build  new_bottle_dialog.py  preferences.py
bottles/frontend/widgets/: component.py  dependency.py  executable.py  importer.py  installer.py  library.py  meson.build  playtimechart_base.py  playtimechart_hourly.py  playtimechart_monthly.py  playtimechart_weekly.py  program.py  state.py
bottles/frontend/widgets/preferences/: __init__.py  components.py  graphics.py  meson.build  performance.py  system.py
bottles/frontend/windows/: bottlepicker.py  crash.py  dependency_install.py  depscheck.py  display.py  dlloverrides.py  drives.py  duplicate.py  envvars.py  exclusionpatterns.py  fsr.py  gamescope.py  generic.py  installer.py  journal.py  launchoptions.py  mangohud.py  meson.build  onboard.py  playtimegraph.py  protonalert.py  registry_rules.py  rename.py  sandbox.py  upgradeversioning.py  vkbasalt.py  vmtouch.py  window.py
bottles/tests/: conftest.py
bottles/tests/backend/integration/playtime/: conftest.py  test_aggregation.py  test_disabled_tracking.py  test_failure_run.py  test_playtime_signals.py  test_recovery.py  test_schema_meta.py  test_successful_run.py  test_uniqueness_retry.py  test_wine_executor_playtime.py
bottles/tests/backend/manager/: test_playtime.py
bottles/tests/backend/wine/: test_executor.py
bottles/tests/frontend/: test_playtime_service.py
data/: com.usebottles.bottles.desktop.in.in  com.usebottles.bottles.gschema.xml  com.usebottles.bottles.gschema.xml.in  com.usebottles.bottles.metainfo.xml.in.in  meson.build
packaging/aur/: PKGBUILD
packaging/deb/debian/: changelog  control  copyright  rules
packaging/rpm/: README.md  README.packit  bottles.spec  changelog  generate_requires.sh  sources
po/: ar.po  az.po  be.po  bg.po  bn.po  bottles.pot  bs.po  ckb.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  ja.po  ko.po  meson.build  ms.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+6 more)
tests/: conftest.py
