frontenddir = join_paths(pkgdatadir, 'bottles/frontend')

subdir('ui')
subdir('utils')
subdir('views')
subdir('widgets')
subdir('windows')
subdir('cli')

configure_file(
  input: 'bottles.py',
  output: BINARY_NAME,
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: ['rwxr-xr-x']
)

params_file = configure_file(
    input:  'params.py',
    output:  'params.py',
    configuration: conf
)

bottles_sources = [
  '__init__.py',
  'main.py',
  'operation.py',
  params_file,
]

install_data(bottles_sources, install_dir: frontenddir)
