widgetsdir = join_paths(pkgdatadir, 'bottles/frontend/widgets')
subdir('preferences')

bottles_sources = [
  '__init__.py',
  'dependency.py',
  'executable.py',
  'importer.py',
  'installer.py',
  'playtimechart_weekly.py',
  'playtimechart_hourly.py',
  'playtimechart_monthly.py',
  'playtimechart_base.py',
  'program.py',
  'state.py',
  'component.py',
  'library.py',
]

install_data(bottles_sources, install_dir: widgetsdir)
