strategiesdir = join_paths(pkgdatadir, 'bottles/backend/wine/strategies')

bottles_sources = [
  '__init__.py',
  'strategist.py',
  'base_strategies.py',
  'graphics_strategies.py',
  'engine_strategies.py',
  'wrapper_strategies.py',
  'pipeline.py'
]

install_data(bottles_sources, install_dir: strategiesdir)
